fix layout bugs

--- a/frontend/src/components/NewsCard/style.module.less
+++ b/frontend/src/components/NewsCard/style.module.less
@@ -1,7 +1,7 @@
 @import (reference) 'styles/theme.less';
 
 .container {
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     justify-content: space-between;
     background-color: white;
@@ -49,6 +49,7 @@
     align-self: flex-end;
     color: @main-color;
     font-size: @font-size-base;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
